--- a/flink_java/pom.xml
+++ b/flink_java/pom.xml
@@ -87,6 +87,14 @@
             <version>${log4j.version}</version>
             <scope>runtime</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.32</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.apache.flink</groupId>
