--- a/flink_java/pom.xml
+++ b/flink_java/pom.xml
@@ -50,6 +50,20 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- flink写入到Redis的Sink依赖 -->
+        <dependency>
+            <groupId>org.apache.bahir</groupId>
+            <artifactId>flink-connector-redis_2.12</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <!-- flink写入到JDBC的Sink依赖 -->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-connector-jdbc</artifactId>
+            <version>${flink.version}</version>
+        </dependency>
+
+
         <!-- Add connector dependencies here. They must be in the default scope (compile). -->
 
         <!-- Example:
